--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="#about" class="menu-btn">About</a></li>
                 <li><a href="#services" class="menu-btn">Services</a></li>
                 <li><a href="#rooms" class="menu-btn">Rooms</a></li>
-                <li><a href="#teams" class="menu-btn">Team</a></li>
+                <li><a href="#apartments" class="menu-btn">Apartments</a></li>
                 <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
@@ -88,75 +88,52 @@
         </div>
     </section>
 
+    <!-- rooms section start -->
     <section class="rooms" id="rooms">
         <div class="max-width">
             <h2 class="title">Sample Rooms</h2>
-            <div class="rooms-content">
-                <div class="column left">
-                    <div class="text">Our Rooms</div>
-                    <p>Amishi Guest House offers a variety of thoughtfully designed rooms to cater to your comfort and relaxation. Each room is a harmonious blend of modern amenities and rustic charm, providing a cozy retreat after a day of exploration. Immerse yourself in the warmth and elegance of our well-appointed accommodations, complete with picturesque views just outside your window. The rooms are spacious, inviting, and equipped with all the essentials to ensure a delightful stay. Whether you choose a standard room or a suite, you can expect a tranquil ambiance that complements the natural beauty surrounding Amishi Guest House. </p>
+            <div class="carousel owl-carousel">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/room1.jpg" alt="">
+                    </div>
                 </div>
-                <div class="column right">
-                    <h3>Sample Photos :-</h3>
-                    <img src="" alt="Rooms">
+                <div class="card">
+                    <div class="box">
+                        <img src="images/room2.jpg" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/room3.jpg" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/room4.jpg" alt="">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <img src="images/room5.jpg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- teams section start -->
-    <section class="teams" id="teams">
+    
+    <section class="apartments" id="apartments">
         <div class="max-width">
-            <h2 class="title">Our team</h2>
-            <div class="carousel owl-carousel">
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
+            <h2 class="title">Amishi Apartments</h2>
+            <div class="apartments-content">
+                <div class="column left">
+                    <div class="text">Our Apartments</div>
+                    <p>Amishi Guest House and Apartments offer a serene retreat in the heart of Himachal Pradesh, nestled in the picturesque town of Khandaghat. Amishi Guest House welcomes guests with its warm hospitality, providing a comfortable and homely stay. The charming ambiance and well-appointed rooms make it an ideal choice for those seeking tranquility amidst nature. Just a short distance away, Amishi Apartments present a convenient option for rental purposes, catering to diverse accommodation needs. Surrounded by the breathtaking landscapes of Himachal Pradesh, both the guest house and apartments offer a delightful blend of modern amenities and the natural beauty of the region, ensuring a memorable stay.</p>
                 </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <img src="" alt="">
-                        <div class="text">Mr XYZ </div>
-                        <p>Senior , <br> Manager </p>
-                    </div>
+                <div class="column right">
+                    <h3>Sample Photos :-</h3>
+                    <img src="" alt="Rooms">
                 </div>
             </div>
         </div>
@@ -175,27 +152,34 @@
                             <i class="fas fa-user"></i>
                             <div class="info">
                                 <div class="head">Name</div>
-                                <div class="sub-title">Paras Agarwal</div>
+                                <div class="sub-title">Mr. Amit Khurana</div>
                             </div>
                         </div>
                         <div class="row">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="fas fa-mobile"></i>
                             <div class="info">
-                                <div class="head">Address</div>
-                                <div class="sub-title">Ansal Tanushree, Ghaziabad</div>
+                                <div class="head">Mobile No.</div>
+                                <div class="sub-title">9891251278</div>
                             </div>
                         </div>
                         <div class="row">
                             <i class="fas fa-envelope"></i>
                             <div class="info">
                                 <div class="head">Email</div>
-                                <div class="sub-title">paras.ag94@gmail.com</div>
+                                <div class="sub-title">amishiguesthouse@gmail.com</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Amishi Guest House,Jangal Surho,Himachal Pradesh</div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="column right">
-                    <div class="text">Message me</div>
+                    <div class="text">Message Us</div>
                     <form action="mailto:paras.ag94@gmail.com">
                         <div class="fields">
                             <div class="field name">
